--- a/Travel.html
+++ b/Travel.html
@@ -72,7 +72,7 @@ and open the template in the editor.
                 </ul>
         
         <img  src="img/portfolio/Porto.jpg" alt="Porto vs Benfica being played at the Estadio do Dragao">
-        <img class="img-fluid" src="img/portfolio/Barca.jpg" alt="PortAventura theme park in Barcelona">
+        <img  src="img/portfolio/Barca.jpg" alt="PortAventura theme park in Barcelona">
         <p><small>Estadio do Dragao in Porto, and an Aerial shot of Barcelona.</small></p>
     </body>
 </html>
