--- a/CV.html
+++ b/CV.html
@@ -65,16 +65,16 @@
         </div>
         <p class="lead mb-5">I am a first year BIS student in UCC, currently in the second semester.</p>
         <div class="social-icons">
-          <a href="linkedin.com">
+          <a href="https://www.linkedin.com">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="github.com">
+          <a href="https://www.github.com">
             <i class="fab fa-github"></i>
           </a>
-          <a href="twitter.com">
+          <a href="https://www.twitter.com">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="facebook.com">
+          <a href="https://www.facebook.com">
             <i class="fab fa-facebook-f"></i>
           </a>
         </div>
