--- a/Homepage.html
+++ b/Homepage.html
@@ -8,10 +8,80 @@ and open the template in the editor.
     <head>
         <title>Ryan O'Shea - Homepage</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <style>
+        body {
+            background-color:#F1f1f2;
+                font-weight: bolder;
+                color: #000;
+                background-image: url("Consultancy.jpg");
+      font-family: Verdana,sans-serif;
+        }
+        head {
+            background-image: url("Consultancy.jpg");
+        }
+.header {
+  background-color: #f5f5f5;
+  padding: 20px;
+  text-align: center;
+  font-family: "Times New Roman", Times, serif;
+  font-style: oblique;
+}
+.but{
+    font-size: 45px;
+    font-weight: bold;
+    font-family:"Times New Roman", Times, serif;
+    font-style: oblique;
+}
+
+/* Style the top navigation bar */
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+/* Style the topnav links */
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change color on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Create three equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 30%;
+  padding: 15px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width:600px) {
+  .column {
+    width: 100%;
+  }
+}
+    </style>
     </head>
     <body>
+         <div class="topnav">
         <a href="https://github.com/ros-118409334/PhpProject10">Github</a>
-        <a href="https://dashboard.heroku.com/apps/phproject1">Heroku</a>
+        <a href="https://phpproject110.herokuapp.com/">Heroku</a>
+         </div>
     </body>
 </html>
