--- a/Sports.html
+++ b/Sports.html
@@ -64,8 +64,8 @@
                     <li>My favourite player across the world is Kylian Mbappe who plays for Paris Saint Germain in the French Ligue 1.</li>
                     <li>My interest in football comes from my older brother who introduced me to the sport through the video game FIFA 06, he also influenced my choice of club as he too supports Arsenal.</li>
                 </ul>
-        <img  src="img/portfolio/Torreira.png" alt="Lucas Torreira, Player for Arsenal and Uruguay">
-        <img class="img-fluid" src="img/portfolio/Mbappe.jpg" alt="Kylian Mbappe, Player for Paris Saint Germain and France">
+        <img  src="Torreira.png" alt="Lucas Torreira, Player for Arsenal and Uruguay">
+        <img class="img-fluid" src="Mbappe.jpg" alt="Kylian Mbappe, Player for Paris Saint Germain and France">
         <p><small>Lucas Torreira of Arsenal, and PSG's Kylian Mbappe</small></p>
         </body>
 </html>
