--- a/Travel.html
+++ b/Travel.html
@@ -71,8 +71,8 @@ and open the template in the editor.
                     <li>We visited PortAventura theme park, FC Barcelona's football stadium, The Nou Camp, and Barcelona Zoo.</li>
                 </ul>
         
-        <img  src="img/portfolio/Porto.jpg" alt="Porto vs Benfica being played at the Estadio do Dragao">
-        <img  src="img/portfolio/Barca.jpg" alt="PortAventura theme park in Barcelona">
+        <img  src="Porto.jpg" alt="Porto vs Benfica being played at the Estadio do Dragao">
+        <img  src="Barca.jpg" alt="PortAventura theme park in Barcelona">
         <p><small>Estadio do Dragao in Porto, and an Aerial shot of Barcelona.</small></p>
     </body>
 </html>
